--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.29.1",
     "aos": "^2.3.4",
     "js-cookie": "^3.0.5",
+    "lenis": "^1.3.16",
     "lucide-react": "^0.554.0",
     "next": "^15.4.8",
     "react": "19.2.0",
