--- a/package.json
+++ b/package.json
@@ -9,23 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@ant-design/nextjs-registry": "^1.2.0",
-    "@ant-design/v5-patch-for-react-19": "^1.0.3",
-    "antd": "^5.29.1",
-    "aos": "^2.3.4",
-    "js-cookie": "^3.0.5",
     "lenis": "^1.3.16",
     "lucide-react": "^0.554.0",
     "next": "^15.4.8",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0",
-    "sonner": "^2.0.7"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/aos": "^3.0.7",
-    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
